--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
+
 * {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Figtree", sans-serif;
+  font-optical-sizing: auto;
   font-weight: normal;
 }
 
@@ -7,9 +10,34 @@ body {
   margin: 0;
 }
 
+p {
+  margin-top: 0;
+  white-space: normal; /* Ensures text wraps */
+  overflow-wrap: break-word; /* Breaks long words */
+  word-break: break-word; /* Ensures word breaking */
+  line-height: 1.6;
+  letter-spacing: 0.02em;
+  margin-bottom: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
 header {
   background-color: rgb(196, 253, 234);
   padding: 10px;
+}
+
+header .container {
+  justify-content: space-between;
 }
 
 .container {
@@ -34,6 +62,9 @@ nav a {
   display: inline-block;
   color: #000;
 }
+h3 {
+  font-weight: 700;
+}
 
 .outer-container {
   padding: 15px 0;
@@ -42,23 +73,186 @@ nav a {
 .product-card {
   width: 24%;
   background-color: rgb(231, 231, 231);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: #000;
 }
 
 .product-info {
   padding: 0 15px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100%;
 }
 
-a.btn {
+.btn {
   text-decoration: none;
   padding: 15px;
   background-color: blueviolet;
   color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   display: inline-block;
+  border: none;
+  cursor: pointer;
+  margin-top: auto;
+}
+
+.btn:hover {
+  background-color: rgb(75, 11, 134);
 }
 
 img {
   width: 100%;
   height: auto;
   max-width: 100%;
+}
+
+.product-img img {
+  aspect-ratio: 10 / 8;
+  object-fit: cover;
+  display: block;
+}
+
+.mb-15 {
+  padding-bottom: 15px;
+}
+
+.search-box {
+  display: flex;
+  align-items: center;
+}
+
+input[type="text"] {
+  line-height: normal;
+  height: 45px;
+  box-sizing: border-box;
+  padding: 5px;
+  border: 1px solid #cbcbcb;
+  border-radius: 8px 0 0 8px;
+}
+
+/*Shimmer Ui CSS*/
+
+.card {
+  position: relative;
+  -webkit-box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+  background-color: #e7e7e7;
+  border-radius: 20px;
+  height: 500px;
+  overflow: hidden;
+  width: 24%;
+  margin: 40px auto;
+}
+
+.shimmerBG {
+  animation-duration: 2.2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+  background: #ddd;
+  background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
+  background-size: 1200px 100%;
+}
+
+@-webkit-keyframes shimmer {
+  0% {
+    background-position: -100% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -1200px 0;
+  }
+  100% {
+    background-position: 1200px 0;
+  }
+}
+
+.media {
+  height: 200px;
+}
+
+.p-32 {
+  padding: 32px;
+}
+
+.title-line {
+  height: 24px;
+  width: 100%;
+  margin-bottom: 12px;
+  border-radius: 20px;
+}
+
+.content-line {
+  height: 8px;
+  width: 100%;
+  margin-bottom: 16px;
+  border-radius: 8px;
+}
+
+.end {
+  width: 40%;
+}
+
+.m-t-24 {
+  margin-top: 24px;
+}
+
+.res-info-box {
+  margin-bottom: 20px;
+}
+
+.item-box {
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(2, 6, 12, 0.15);
+  display: flex;
+}
+
+.item-box:first-child {
+  border-top: 1px solid #02060c26;
+}
+
+.item-box img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.item-box > div:last-child {
+  margin-left: 60px;
+  max-height: 174px;
+  width: 160px;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.item-box > div:first-child {
+  width: calc(100% - 220px);
+}
+
+.res-menu-main {
+  max-width: 800px;
+  min-height: 800px;
+  margin: 0 auto;
+  padding: 25px 0;
+}
+
+p.item-name {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+p.item-price {
+  font-weight: bold;
+  margin: 10px 0;
 }
